# research-assistant-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  chroma_manager.py  debug_mcp_inspector.bat  debug_mcp_inspector.sh  pdf_processor.py  pyproject.toml  requirements.txt  requirements.uv  research-assistant.py  test_server.py  update_mendeley.bat  update_mendeley.sh  update_zotero.bat  update_zotero.sh
